--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI LitEra
+name: CI LitEra (Dockerized)
 
 on:
   pull_request:
@@ -7,56 +7,21 @@ on:
     branches: [main, dev]
 
 jobs:
-  back_unit_tests:
+  tests:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./backend
 
     steps:
       - name: 📥 Checkout du code
         uses: actions/checkout@v3
 
-      - name: 🏗️ Installer Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
+      - name: 🐳 Installer Docker Compose
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker-compose
 
-      # Backend
-      - name: 📦 Installer les dépendances du backend
-        run: npm install
+      - name: 🚀 Lancer les tests avec Docker Compose
+        run: |
+          docker-compose -f docker-compose.test.yml up --build --abort-on-container-exit
 
-      - name: 🔍 Vérifier TypeScript Backend
-        run: npx tsc --noEmit
-
-      - name: ✅ Lancer les tests Backend
-        run: npm test
-
-  front_unit_tests:
-    runs-on: ubuntu-latest
-    needs: back_unit_tests # ⏳ N'exécute le frontend que si le backend réussit
-    defaults:
-      run:
-        working-directory: ./frontend
-
-    steps:
-      - name: 📥 Checkout du code
-        uses: actions/checkout@v3
-
-      - name: 🏗️ Installer Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-
-      # Frontend
-      - name: 📦 Installer les dépendances du frontend
-        run: npm install
-
-      - name: 🔍 Vérifier TypeScript Frontend
-        run: npx tsc --noEmit
-
-      - name: ✅ Lancer les tests Frontend
-        run: npm test
-
-      - name: 🏗️ Vérifier que l’application compile sans erreur
-        run: npm run build
+      - name: 🧹 Nettoyer les conteneurs après les tests
+        run: docker-compose -f docker-compose.test.yml down
