--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,9 +19,15 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y docker-compose
 
+      - name: 🛠 Générer le fichier .env.ci à partir des secrets GitHub
+        run: |
+          echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> .env.ci
+          echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env.ci
+          echo "POSTGRES_DB=${{ secrets.POSTGRES_DB }}" >> .env.ci
+
       - name: 🚀 Lancer les tests avec Docker Compose
         run: |
-          docker-compose -f docker-compose.test.yml up --build --abort-on-container-exit
+          docker-compose -f docker-compose.test.yml --env-file .env.ci up --build --abort-on-container-exit
 
       - name: 🧹 Nettoyer les conteneurs après les tests
         run: docker-compose -f docker-compose.test.yml down
