--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -3,31 +3,28 @@ version: "3.8"
 services:
   database:
     image: postgres:14
-    container_name: litera-db-test
+    env_file:
+      - .env.ci
     environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: litera
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     ports:
       - "5432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U user -d litera"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 5s
+      timeout: 3s
       retries: 5
 
   backend:
     build: ./backend
-    container_name: litera-backend-test
     depends_on:
       database:
         condition: service_healthy
-    environment:
-      DATABASE_URL: postgres://user:password@database:5432/litera
-    command: npm test
-
-  frontend:
-    build: ./frontend
-    container_name: litera-frontend-test
-    depends_on:
-      - backend
-    command: npm test
+    env_file:
+      - .env.ci
+    command: npm run test
+    volumes:
+      - ./backend:/app
+      - /app/node_modules
