--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.10",
+    "@types/pg": "^8.11.11",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.6",
     "ts-node": "^10.9.2",
@@ -24,6 +25,7 @@
   },
   "dependencies": {
     "apollo-server-express": "^3.13.0",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "graphql": "^16.10.0",
     "pg": "^8.14.1",
