--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@types/graphql": "^14.2.3",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.10",
     "@types/pg": "^8.11.11",
@@ -31,6 +32,7 @@
     "graphql": "^16.10.0",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
+    "type-graphql": "^2.0.0-rc.2",
     "typeorm": "^0.3.21"
   }
 }
