--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
     "graphql": "^16.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.86.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
