--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,17 @@
-FROM node:18-alpine
+FROM node:18 AS build
 WORKDIR /app
-COPY package.json package-lock.json ./
-RUN npm install
+
 COPY . .
-CMD ["npm", "run", "start"]
+
+RUN npm install
+RUN npm run build
+
+FROM node:18-slim
+WORKDIR /app
+
+RUN npm install -g serve
+
+COPY --from=build /app/build ./build
+
 EXPOSE 3000
+CMD ["serve", "-s", "build", "-l", "3000"]
