--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,17 +40,16 @@ services:
       - database
 
   frontend:
-    build: ./frontend
-    container_name: litera-frontend
-    ports:
-      - "3000:3000"
-    restart: unless-stopped
-    depends_on:
-      - backend
-    # 🚫 Supprime les volumes, sinon ça écrase ce qui a été construit dans l'image
-    # volumes:
-    #   - ./frontend/src:/app/src
-    #   - ./frontend/public:/app/public
+  build:
+    context: ./frontend
+    args:
+      VITE_GRAPHQL_API_URL: https://api.litera-app.com/graphql
+  container_name: litera-frontend
+  ports:
+    - "3000:3000"
+  restart: unless-stopped
+  depends_on:
+    - backend
 
 volumes:
   postgres_data:
