--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,13 +2,14 @@
 FROM node:18 AS build
 WORKDIR /app
 
-# On passe la variable à la build
-ARG VITE_GRAPHQL_API_URL
-ENV VITE_GRAPHQL_API_URL=$VITE_GRAPHQL_API_URL
+# Injecte la variable au moment du build
+ARG REACT_APP_GRAPHQL_API_URL
+ENV REACT_APP_GRAPHQL_API_URL=$REACT_APP_GRAPHQL_API_URL
+
+COPY package*.json ./
+RUN npm install
 
 COPY . .
-
-RUN npm install
 RUN npm run build
 
 # Étape de production
@@ -16,8 +17,7 @@ FROM node:18-slim
 WORKDIR /app
 
 RUN npm install -g serve
-
-COPY --from=build /app/dist ./dist
+COPY --from=build /app/build ./build
 
 EXPOSE 3000
-CMD ["serve", "-s", "dist", "-l", "3000"]
+CMD ["serve", "-s", "build", "-l", "3000"]
