--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
       - ./backend:/app
       - /app/node_modules
     command: npm run dev
+    env_file: ./backend/.env
     depends_on:
       - database
 
