--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,7 @@ services:
     build:
       context: ./frontend
       args:
-        REACT_APP_GRAPHQL_API_URL: http://localhost:4000/graphql
+        REACT_APP_GRAPHQL_API_URL: ${REACT_APP_GRAPHQL_API_URL}
     container_name: litera-frontend
     ports:
       - "3000:3000"
