--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,8 @@ services:
     restart: unless-stopped
     depends_on:
       - backend
+    env_file:
+      - ./frontend/.env
 
 volumes:
   postgres_data:
