--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -7,8 +7,8 @@ services:
     volumes:
       - ./frontend:/app
       - /app/node_modules
+      - ./frontend/.env.development:/app/.env
     working_dir: /app
     command: sh -c "npm install && npm start"
     environment:
       - CHOKIDAR_USEPOLLING=true
-      - REACT_APP_GRAPHQL_API_URL=http://localhost:4000/graphql
