--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/graphql": "^14.2.3",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.10",
