--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,9 +21,10 @@ jobs:
       - name: 🚀 Deploy via SSH
         run: |
           ssh -o StrictHostKeyChecking=no ubuntu@51.178.137.12 << 'EOF'
-            cd ~/litera
-            git pull origin main
-            docker compose down
-            docker compose build --build-arg REACT_APP_GRAPHQL_API_URL=https://api.litera-app.com/graphql
-            docker compose up -d
+          cd ~/litera
+          git pull origin main
+          docker compose down
+          docker rmi litera-frontend || true
+          docker compose build --build-arg REACT_APP_GRAPHQL_API_URL=https://api.litera-app.com/graphql
+          docker compose up -d
           EOF
