--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,9 +1,10 @@
 services:
   frontend:
-    command: sh -c "npm install && npm start"
     volumes:
       - ./frontend:/app
       - /app/node_modules
+    working_dir: /app
+    command: sh -c "npm install && npm start"
     environment:
       - CHOKIDAR_USEPOLLING=true
       - REACT_APP_GRAPHQL_API_URL=http://localhost:4000/graphql
