--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3.8"
+
 services:
   database:
     image: postgres:14
@@ -41,9 +43,9 @@ services:
 
   frontend:
     build:
-    context: ./frontend
-    args:
-      REACT_APP_GRAPHQL_API_URL: ${REACT_APP_GRAPHQL_API_URL}
+      context: ./frontend
+      args:
+        REACT_APP_GRAPHQL_API_URL: ${REACT_APP_GRAPHQL_API_URL}
     container_name: litera-frontend
     ports:
       - "3000:3000"
