--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,6 @@ jobs:
             git pull origin main
             docker compose down
             docker rmi litera-frontend || true
-            docker compose build --build-arg REACT_APP_GRAPHQL_API_URL=https://api.litera-app.com/graphql
-            docker compose up -d
+            docker compose -f docker-compose.yml build --build-arg REACT_APP_GRAPHQL_API_URL=https://api.litera-app.com/graphql
+            docker compose -f docker-compose.yml up -d
           EOF
