added some features

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -11,6 +11,6 @@
     "skipLibCheck": true,
     "types": ["jest", "node"]
   },
-  "include": ["src"],
+  "include": ["src", "global.d.ts"],
   "exclude": ["node_modules"]
 }
