--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.10",
+    "@types/node-fetch": "^2.6.12",
     "@types/pg": "^8.11.11",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.6",
@@ -39,6 +40,7 @@
     "express": "^4.21.2",
     "graphql": "^16.10.0",
     "jsonwebtoken": "^9.0.2",
+    "node-fetch": "^2.7.0",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
     "type-graphql": "^2.0.0-rc.2",
