--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,23 @@ services:
     depends_on:
       - backend
 
+  caddy:
+    image: caddy
+    container_name: caddy
+    restart: unless-stopped
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - /etc/caddy/Caddyfile:/etc/caddy/Caddyfile
+      - caddy_data:/data
+      - caddy_config:/config
+    depends_on:
+      - frontend
+      - backend
+
 volumes:
   postgres_data:
   pgadmin_data:
+  caddy_data:
+  caddy_config:
