--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,8 +23,15 @@ jobs:
           ssh -o StrictHostKeyChecking=no ubuntu@51.178.137.12 << 'EOF'
             cd ~/litera
             git pull origin main
+
+            echo "🧹 Suppression des anciens conteneurs (dont Caddy)"
             docker compose down
+            docker rm -f caddy || true
             docker rmi litera-frontend || true
+
+            echo "⚙️ Rebuild avec la bonne URL"
             docker compose -f docker-compose.yml build --build-arg REACT_APP_GRAPHQL_API_URL=https://api.litera-app.com/graphql
+
+            echo "🚀 Restart de tous les services"
             docker compose -f docker-compose.yml up -d
           EOF
